--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 Code and data used in this paper will be uploaded upon acceptance of journal article. 
-
+Need to also upload necessary shapefile for code to work.
