--- a/README
+++ b/README
@@ -1,2 +1,3 @@
-Code and data used in this paper will be uploaded upon acceptance of journal article. 
-Need to also upload necessary shapefile for code to work.
+Code and necessary shapefiles can be found in this github repository.
+More details on how to use LEOHS and the full code will be published upon acceptance.
+The script can be used to make the data used in the manuscript. 
