--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Code and necessary shapefiles can be found in this github repository.
 More details on how to use LEOHS and the full code will be published upon acceptance.
 The script can be used to make the data analyzed in the manuscript. 
+
+Upon acceptance, add Equations as txt and LEOHS Apply Harmonization code
